[project]
name = "carrinho-do-dudu-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kaubarros-24", email = "martinsbarroskaua@gmail.com"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn[standard]>=0.34.2", "gunicorn>=23.0.0", "sqlalchemy>=2.0.40", "passlib[bcrypt]>=1.7.4", "python-jose[cryptography]>=3.4.0", "pydantic[email]>=2.11.4", "python-multipart>=0.0.20"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev   = "uvicorn src.carrinho_do_dudu_backend.main:app --reload --host 0.0.0.0 --port 8000"
start = "gunicorn -k uvicorn.workers.UvicornWorker src.carrinho_do_dudu_backend.main:app --bind 0.0.0.0:8000 --workers 4"
